--- a/_site.yml
+++ b/_site.yml
@@ -7,6 +7,8 @@ navbar:
       href: people-analytics.html
     - text: "presentations"
       href: presentations.html
+    - text: "research"
+      href: research.html
   right:
     - icon: fa-github fa-lg
       href: http://github.com/ptsag 
